--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: errorhandlr
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-Depends: R (>= 3.5.1)
-License: What license is it under?
+Title: R error handler
+Version: 0.0.1
+Authors@R: person("Jakez", "Rolland", email = "jakez.rolland@gmail.com", role = c("aut", "cre"))
+Description: Simple functions to print errors stack in R.
+Depends: R (>= 3.3.0)
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
